# codex-kit

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
apps/codexkit/: package.json  vite.config.ts
apps/codexkit/scripts/i18n/: check-i18n.ts
apps/codexkit/src/: global.css
apps/codexkit/src/app/: codexkit-api.ts  preferences.test.ts  preferences.ts
apps/codexkit/src/routes/: index.tsx
apps/codexkit/src/server/: app.test.ts  dev-server.test.ts  entry.ts
apps/desktop/: .gitignore  package.json  pkg.config.cjs  tsconfig.json  vite.config.ts
apps/desktop/scripts/: prepare-sidecars.ts
apps/desktop/src-node/: runtime-sidecar.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  runtime.rs  tray.rs
apps/desktop/src-tauri/src/runtime/: dev.rs  launch.rs  sidecar.rs
apps/runtime/: index.html  package.json  paraglide.config.ts  tsconfig.json  vite.config.ts
apps/runtime/project.inlang/: settings.json
apps/runtime/scripts/: compile-paraglide.ts
apps/runtime/src/: global.css  routeTree.gen.ts
apps/runtime/src/app/: app.tsx  clients.ts  codexkit-api.ts  (+5 more)
apps/website/: package.json  tsconfig.json  vite.config.ts
apps/website/src/: main.tsx
docs/: codex-app-ipc-session-message.md
docs/codex-assumption/: README.md  codex-app-ipc-session-message.md  codex-sqlite-state.md  rollout-jsonl-format.md
plugin/.codex-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/codexkit/: SKILL.md
(+93 files in other folders)
